--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
     volumes:
       - ./nginx.prod.conf:/etc/nginx/nginx.conf:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
+      - ./aframe-extras:/usr/share/nginx/html/aframe-extras:ro
+      - ./script.js:/usr/share/nginx/html/script.js:ro
+      - ./cat.glb:/usr/share/nginx/html/cat.glb:ro
+      - ./floor_lamp.glb:/usr/share/nginx/html/floor_lamp.glb:ro
     depends_on:
       - vr-escape-room
     restart: unless-stopped
