--- a/nginx.prod.conf
+++ b/nginx.prod.conf
@@ -50,16 +50,27 @@ http {
         add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline' 'unsafe-eval'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://aframe.io; style-src 'self' 'unsafe-inline';" always;
         add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 
-        # Serve static files directly
+        # Serve static files directly from nginx
+        location /aframe-extras/ {
+            alias /usr/share/nginx/html/aframe-extras/;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|glb|gltf)$ {
+            root /usr/share/nginx/html;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            try_files $uri @proxy;
+        }
+
+        location @proxy {
             proxy_pass https://vr-escape-room:8443;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_ssl_verify off;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         # VR Escape Room Application
