--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - NODE_ENV=production
     volumes:
       - ./certs:/app/certs:ro
+      - /etc/letsencrypt:/etc/letsencrypt:ro
     networks:
       - vr-network
 
