refactor: complete project overhaul
- separate each room
- add src/ folder
- improve lighting and text

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -16,11 +16,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.local.conf:/etc/nginx/nginx.conf:ro
-      - ./aframe-extras:/usr/share/nginx/html/aframe-extras:ro
-      - ./script.js:/usr/share/nginx/html/script.js:ro
-      - ./cat.glb:/usr/share/nginx/html/cat.glb:ro
-      - ./floor_lamp.glb:/usr/share/nginx/html/floor_lamp.glb:ro
-      - ./favicon.svg:/usr/share/nginx/html/favicon.svg:ro
+      - .:/usr/share/nginx/html:ro
     depends_on:
       - vr-escape-room
     restart: unless-stopped
